--- a/templates/lang/groovy/proj-build.gradle
+++ b/templates/lang/groovy/proj-build.gradle
@@ -1,6 +1,6 @@
 dependencies {
   compile localGroovy()
-  compile 'net.sourceforge.findbugs:jsr305'
+  compile 'com.google.code.findbugs:jsr305'
   testCompile("org.spockframework:spock-core")  {
     exclude module: 'groovy-all'
   }
