--- a/templates/lang/android_app/proj-build.gradle
+++ b/templates/lang/android_app/proj-build.gradle
@@ -19,7 +19,7 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'net.sourceforge.findbugs:jsr305'
+  compile 'com.google.code.findbugs:jsr305'
   compile 'com.android.support:appcompat-v7'
   compile 'com.android.support.constraint:constraint-layout'
 
