--- a/templates/lang/java/proj-build.gradle
+++ b/templates/lang/java/proj-build.gradle
@@ -2,7 +2,7 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 dependencies {
-  compile 'net.sourceforge.findbugs:jsr305'
+  compile 'com.google.code.findbugs:jsr305'
   testCompile 'junit:junit'
   testCompile 'org.easytesting:fest-assert-core'
 }
