--- a/templates/lang/android_app_dagger/proj-build.gradle
+++ b/templates/lang/android_app_dagger/proj-build.gradle
@@ -24,6 +24,11 @@ dependencies {
   compile 'com.android.support:appcompat-v7'
   compile 'com.android.support.constraint:constraint-layout'
 
+  compile 'com.google.dagger:dagger'
+  compile 'com.google.dagger:dagger-android'
+  annotationProcessor 'com.google.dagger:dagger-compiler'
+  annotationProcessor 'com.google.dagger:dagger-android-processor'
+
   testCompile 'junit:junit'
   testCompile 'org.robolectric:robolectric'
   testCompile 'org.easytesting:fest-assert-core'
