use episode6 android-inject for initial di setup in androidAppDagger project

--- a/templates/lang/android_app_dagger/proj-build.gradle
+++ b/templates/lang/android_app_dagger/proj-build.gradle
@@ -28,6 +28,9 @@ dependencies {
   compile 'com.google.dagger:dagger-android'
   annotationProcessor 'com.google.dagger:dagger-compiler'
   annotationProcessor 'com.google.dagger:dagger-android-processor'
+  
+  compile 'com.episode6.hackit.android.inject:context-annotations'
+  compile 'com.episode6.hackit.android.inject:context-modules'
 
   compile 'com.jakewharton:butterknife'
   annotationProcessor 'com.jakewharton:butterknife-compiler'
