make licenseName customizable

--- a/templates/deployable-gradle.properties
+++ b/templates/deployable-gradle.properties
@@ -3,7 +3,7 @@ deployable.pom.url={{ .GitRepoURL }}
 deployable.pom.scm.url=extensible
 deployable.pom.scm.connection=scm:{{ .GitRepoURL }}.git
 deployable.pom.scm.developerConnection=scm:{{ .GitRepoURL }}.git
-deployable.pom.license.name=The MIT License (MIT)
+deployable.pom.license.name={{ .LicenseName }}
 deployable.pom.license.url={{ .GitRepoURL }}/blob/master/LICENSE
 deployable.pom.license.distribution=repo
 deployable.pom.developer.id=episode6
