--- a/templates/lang/android_lib/proj-build.gradle
+++ b/templates/lang/android_lib/proj-build.gradle
@@ -2,8 +2,8 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "26.0.0"
+  compileSdkVersion {{ .AndroidCompileSdkVersion }}
+  buildToolsVersion {{ .AndroidBuildToolsVersion }}
 
   buildTypes {
     release {
