--- a/templates/lang/android_app_e6/proj-build.gradle
+++ b/templates/lang/android_app_e6/proj-build.gradle
@@ -21,13 +21,19 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile 'com.google.code.findbugs:jsr305'
+
   compile 'com.android.support:appcompat-v7'
+  compile 'com.android.support:cardview-v7'
+  compile 'com.android.support:design'
   compile 'com.android.support.constraint:constraint-layout'
 
   compile 'com.google.dagger:dagger'
   compile 'com.google.dagger:dagger-android'
   annotationProcessor 'com.google.dagger:dagger-compiler'
   annotationProcessor 'com.google.dagger:dagger-android-processor'
+
+  compile 'com.jakewharton:butterknife'
+  annotationProcessor 'com.jakewharton:butterknife-compiler'
 
   compile 'com.episode6.hackit.android.inject:context-annotations'
   compile 'com.episode6.hackit.android.inject:context-modules'
@@ -36,15 +42,12 @@ dependencies {
   compile 'com.episode6.hackit.chop:chop-core'
   compile 'com.episode6.hackit.chop:chop-android'
 
-  compile 'com.jakewharton:butterknife'
-  annotationProcessor 'com.jakewharton:butterknife-compiler'
-
   testCompile 'junit:junit'
-  testCompile 'org.mockito:mockito-inline'
-  testCompile 'com.episode6.hackit.mockspresso:mockspresso-core'
-  testCompile 'org.robolectric:robolectric'
   testCompile 'org.easytesting:fest-assert-core'
   testCompile 'com.episode6.hackit.chop:chop-junit'
+  testCompile 'com.episode6.hackit.mockspresso:mockspresso-core'
+  testCompile 'org.mockito:mockito-inline'
+  testCompile 'org.robolectric:robolectric'
 
   androidTestCompile 'com.google.code.findbugs:jsr305'
   androidTestCompile 'org.easytesting:fest-assert-core'
