add contextScoped background executors and fragmentScoped pausableExecutors to e6AndroidApp

--- a/templates/lang/android_app_e6/proj-build.gradle
+++ b/templates/lang/android_app_e6/proj-build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
   compile 'com.episode6.hackit.disposable:disposables-core'
   compile 'com.episode6.hackit.disposable:pausables-core'
+  compile 'com.episode6.hackit.disposable:disposable-android'
   compile 'com.episode6.hackit.disposable:disposable-butterknife'
 
   testCompile 'junit:junit'
