add dependency on typed! for e6AndroidApp. Bind default TypedPrefs in DI.

--- a/templates/lang/android_app_e6/proj-build.gradle
+++ b/templates/lang/android_app_e6/proj-build.gradle
@@ -47,6 +47,9 @@ dependencies {
   compile 'com.episode6.hackit.disposable:disposable-android'
   compile 'com.episode6.hackit.disposable:disposable-butterknife'
 
+  compile 'com.episode6.hackit.typed:typed-bundles'
+  compile 'com.episode6.hackit.typed:typed-preferences'
+
   testCompile 'junit:junit'
   testCompile 'org.easytesting:fest-assert-core'
   testCompile 'com.episode6.hackit.chop:chop-junit'
