--- a/templates/lang/gradle/proj-build.gradle
+++ b/templates/lang/gradle/proj-build.gradle
@@ -2,8 +2,8 @@ dependencies {
   compile localGroovy()
   compile gradleApi()
 
-  testCompile gradleTestKit()
-  testCompile("org.spockframework:spock-core")  {
+  testImplementation gradleTestKit()
+  testImplementation("org.spockframework:spock-core")  {
     exclude module: 'groovy-all'
   }
 }
