--- a/templates/lang/android_app_e6/proj-build.gradle
+++ b/templates/lang/android_app_e6/proj-build.gradle
@@ -1,10 +1,10 @@
 android {
   compileSdkVersion {{ .AndroidCompileSdkVersion }}
-  buildToolsVersion {{ .AndroidBuildToolsVersion }}
+
   defaultConfig {
     applicationId project.group
     minSdkVersion 16
-    targetSdkVersion 24
+    targetSdkVersion {{ .AndroidCompileSdkVersion }}
     versionCode 1
     versionName project.version
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -16,57 +16,60 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
   }
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+    }
+  }
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.google.code.findbugs:jsr305'
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.google.code.findbugs:jsr305'
 
-  compile 'com.android.support:appcompat-v7'
-  compile 'com.android.support:cardview-v7'
-  compile 'com.android.support:design'
-  compile 'com.android.support.constraint:constraint-layout'
+  implementation 'com.android.support:appcompat-v7'
+  implementation 'com.android.support:cardview-v7'
+  implementation 'com.android.support:design'
+  implementation 'com.android.support.constraint:constraint-layout'
 
-  compile 'com.google.dagger:dagger'
-  compile 'com.google.dagger:dagger-android'
+  implementation 'com.google.dagger:dagger'
+  implementation 'com.google.dagger:dagger-android'
   annotationProcessor 'com.google.dagger:dagger-compiler'
   annotationProcessor 'com.google.dagger:dagger-android-processor'
 
-  provided 'com.episode6.hackit.auto.factory:auto-factory-annotations'
+  compileOnly 'com.episode6.hackit.auto.factory:auto-factory-annotations'
   annotationProcessor 'com.google.auto.factory:auto-factory'
 
-  compile 'com.jakewharton:butterknife'
+  implementation 'com.jakewharton:butterknife'
   annotationProcessor 'com.jakewharton:butterknife-compiler'
 
-  compile 'com.episode6.hackit.android.inject:context-annotations'
-  compile 'com.episode6.hackit.android.inject:context-modules'
-  compile 'com.episode6.hackit.android.inject:more-annotations'
+  implementation 'com.episode6.hackit.android.inject:context-annotations'
+  implementation 'com.episode6.hackit.android.inject:context-modules'
+  implementation 'com.episode6.hackit.android.inject:more-annotations'
 
-  compile 'com.episode6.hackit.chop:chop-core'
-  compile 'com.episode6.hackit.chop:chop-android'
+  implementation 'com.episode6.hackit.chop:chop-core'
+  implementation 'com.episode6.hackit.chop:chop-android'
 
-  compile 'com.episode6.hackit.disposable:disposables-core'
-  compile 'com.episode6.hackit.disposable:pausables-core'
-  compile 'com.episode6.hackit.disposable:disposable-android'
-  compile 'com.episode6.hackit.disposable:disposable-butterknife'
+  implementation 'com.episode6.hackit.disposable:disposables-core'
+  implementation 'com.episode6.hackit.disposable:pausables-core'
+  implementation 'com.episode6.hackit.disposable:disposable-android'
+  implementation 'com.episode6.hackit.disposable:disposable-butterknife'
 
-  compile 'com.episode6.hackit.typed:typed-bundles'
-  compile 'com.episode6.hackit.typed:typed-preferences'
+  implementation 'com.episode6.hackit.typed:typed-bundles'
+  implementation 'com.episode6.hackit.typed:typed-preferences'
 
-  testCompile 'junit:junit'
-  testCompile 'org.easytesting:fest-assert-core'
-  testCompile 'com.episode6.hackit.chop:chop-junit'
-  testCompile 'com.episode6.hackit.mockspresso:mockspresso-core'
-  testCompile 'org.mockito:mockito-inline'
-  testCompile 'org.powermock:powermock-api-mockito2'
-  testCompile 'org.powermock:powermock-module-junit4'
-  testCompile 'org.powermock:powermock-module-junit4-rule'
-  testCompile 'org.powermock:powermock-classloading-xstream'
-  testCompile 'org.robolectric:robolectric'
+  testImplementation 'junit:junit'
+  testImplementation 'org.easytesting:fest-assert-core'
+  testImplementation 'com.episode6.hackit.chop:chop-junit'
+  testImplementation 'com.episode6.hackit.mockspresso:mockspresso-quick'
+  testImplementation 'org.mockito:mockito-inline'
+  testImplementation 'org.powermock:powermock-api-mockito2'
+  testImplementation 'org.powermock:powermock-module-junit4'
+  testImplementation 'org.powermock:powermock-module-junit4-rule'
+  testImplementation 'org.powermock:powermock-classloading-xstream'
+  testImplementation 'org.robolectric:robolectric'
 
-  androidTestCompile 'com.google.code.findbugs:jsr305'
-  androidTestCompile 'org.easytesting:fest-assert-core'
-  androidTestCompile('com.android.support.test.espresso:espresso-core', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
+  androidTestImplementation 'com.google.code.findbugs:jsr305'
+  androidTestImplementation 'org.easytesting:fest-assert-core'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core'
 }
