use implementation in gradle project

--- a/templates/lang/gradle/proj-build.gradle
+++ b/templates/lang/gradle/proj-build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-  compile localGroovy()
-  compile gradleApi()
+  implementation localGroovy()
+  implementation gradleApi()
 
   testImplementation gradleTestKit()
   testImplementation("org.spockframework:spock-core")  {
