--- a/templates/root-build.gradle
+++ b/templates/root-build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "4.4"
+  gradleVersion = "{{ .GradleVersion }}"
   distributionType = "all"
 }
 
