--- a/templates/lang/android_lib/proj-build.gradle
+++ b/templates/lang/android_lib/proj-build.gradle
@@ -21,5 +21,5 @@ dependencies {
   implementation 'com.google.code.findbugs:jsr305'
 
   testImplementation 'junit:junit'
-  testImplementation 'org.easytesting:fest-assert-core'
+  testImplementation 'org.assertj:assertj-core'
 }
