make deployable optional (thus also making git optional)

--- a/templates/proj-build.gradle
+++ b/templates/proj-build.gradle
@@ -1,4 +1,4 @@
-{{ range $index, $plugin := .Lang.GradlePlugins }}
+{{ range $index, $plugin := .GradlePlugins }}
 apply plugin: '{{ $plugin }}'{{ end }}
 
 {{ .LangSpecProjGradleBody }}
