make buildscript and project repos dynamic by language

--- a/templates/proj/multi/root-build.gradle
+++ b/templates/proj/multi/root-build.gradle
@@ -1,7 +1,6 @@
 allprojects {
-  repositories {
-    jcenter()
-    google()
+  repositories {{{ range $index, $repo := .ProjectRepos }}
+    {{ $repo }} {{ end }}
   }
 
   group = '{{ .Group }}'
