--- a/templates/proj/single/root-build.gradle
+++ b/templates/proj/single/root-build.gradle
@@ -1,6 +1,5 @@
-repositories {
-  jcenter()
-  google()
+repositories { {{ range $index, $repo := .ProjectRepos }}
+  {{ $repo }} {{ end }}
 }
 
 group = '{{ .Group }}'
