--- a/templates/lang/android_lib/proj-build.gradle
+++ b/templates/lang/android_lib/proj-build.gradle
@@ -18,7 +18,7 @@ android {
 }
 
 dependencies {
-  implementation 'com.google.code.findbugs:jsr305'
+  implementation 'com.android.support:support-annotations'
 
   testImplementation 'junit:junit'
   testImplementation 'org.assertj:assertj-core'
