--- a/templates/lang/android_app_dagger/proj-build.gradle
+++ b/templates/lang/android_app_dagger/proj-build.gradle
@@ -26,7 +26,6 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.android.support:support-annotations'
-
   implementation 'com.android.support:appcompat-v7'
   implementation 'com.android.support.constraint:constraint-layout'
 
@@ -47,6 +46,7 @@ dependencies {
   testImplementation 'com.episode6.hackit.mockspresso:mockspresso-quick'
   testImplementation 'org.mockito:mockito-inline'
   testImplementation 'org.robolectric:robolectric'
+  testImplementation 'org.robolectric:shadows-supportv4'
 
   androidTestImplementation 'com.squareup.assertj:assertj-android'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core'
