--- a/templates/lang/kotlin_android_app/proj-build.gradle
+++ b/templates/lang/kotlin_android_app/proj-build.gradle
@@ -25,7 +25,8 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'com.android.support:support-annotations'
+  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7'
+
   implementation 'com.android.support:appcompat-v7'
   implementation 'com.android.support.constraint:constraint-layout'
 
