--- a/templates/lang/kotlin_android_app/proj-build.gradle
+++ b/templates/lang/kotlin_android_app/proj-build.gradle
@@ -9,6 +9,11 @@ android {
     versionName project.version
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
+
+  sourceSets.each {
+    it.java.srcDirs += "src/${it.name}/kotlin"
+  }
+
   buildTypes {
     release {
       minifyEnabled true
