update gradle wrapper configuration

--- a/templates/root-build.gradle
+++ b/templates/root-build.gradle
@@ -7,7 +7,7 @@ buildscript {
   }
 }
 
-task wrapper(type: Wrapper) {
+wrapper {
   gradleVersion = "{{ .GradleVersion }}"
   distributionType = "all"
 }
